--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -14,10 +14,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="32dp"
-        android:text="DATA"
+        android:text="No booking found\n please scan"
         android:textAlignment="center"
         android:textSize="52sp"
-        app:layout_constraintBottom_toTopOf="@+id/navigate_destination_button"
+        app:layout_constraintBottom_toTopOf="@+id/btn_scan_now"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,19 +26,16 @@
         android:gravity="center_horizontal" />
 
     <Button
-        android:id="@+id/navigate_destination_button"
+        android:id="@+id/btn_scan_now"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
-        android:text="navigate_destination_button"
+        android:layout_marginEnd="24dp"
+        android:background="@drawable/round_button"
+        android:text="@string/booking_fragment_scan_now"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text"
-        app:layout_constraintVertical_bias="0.594" />
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
