--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -8,23 +8,146 @@
     android:layout_height="match_parent"
     tools:context="com.androidpro.bookingapp.ui.BookingFragment">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_empty_state"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <TextView
+            android:id="@+id/text_empty_state_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="36dp"
+            android:layout_marginBottom="32dp"
+            android:text="@string/booking_fragment_start_title"
+            android:textAlignment="center"
+            android:textSize="52sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
+            android:visibility="visible"
+            android:gravity="center_horizontal"
+            android:textColor="@color/purple_700"/>
     <TextView
-        android:id="@+id/text"
+        android:id="@+id/text_empty_state_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="32dp"
-        android:text="No booking found\n please scan"
+        android:text="@string/booking_fragment_empty_state_description"
         android:textAlignment="center"
-        android:textSize="52sp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_scan_now"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed"
         android:gravity="center_horizontal" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/qr_details_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardElevation="10dp"
+        app:cardCornerRadius="20dp"
+        android:layout_margin="10dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardMaxElevation="12dp"
+        app:cardPreventCornerOverlap="true"
+        app:cardUseCompatPadding="true"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"
+        >
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="16dp">
+<LinearLayout
+    android:id="@+id/ll_location_id"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:layout_constraintTop_toTopOf="parent"
+    android:gravity="center_vertical"
+    app:layout_constraintStart_toStartOf="parent">
+        <TextView
+            android:id="@+id/text_location_id_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/booking_fragment_location_id"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/text_location_id_value"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            app:layout_constraintTop_toBottomOf="@+id/text_location_id_title"
+            app:layout_constraintStart_toStartOf="parent"
+            android:text=""
+            android:textSize="16sp" />
+
+</LinearLayout>
+        <LinearLayout
+            android:id="@+id/ll_location_details"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/ll_location_id"
+            app:layout_constraintStart_toStartOf="parent">
+            <TextView
+                android:id="@+id/text_location_details_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/booking_fragment_location_details_title"
+                android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/text_location_details_value"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            app:layout_constraintStart_toEndOf="@+id/text_location_id_title"
+            android:text=""
+            android:textSize="16sp"
+            />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_price"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/ll_location_details"
+            app:layout_constraintStart_toStartOf="parent"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/text_price_per_minute_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/booking_fragment_price_per_min_title"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/text_price_per_minute_value"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                app:layout_constraintStart_toEndOf="@+id/text_location_id_title"
+                android:text=""
+                android:textSize="16sp"
+                />
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
     <Button
         android:id="@+id/btn_scan_now"
         android:layout_width="match_parent"
