--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -146,6 +146,34 @@
                 android:textSize="16sp"
                 />
         </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_booking_duration"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/ll_price"
+            app:layout_constraintStart_toStartOf="parent"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/text_booking_duration"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/booking_fragment_booking_duration"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/text_booking_duration_value"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                app:layout_constraintStart_toEndOf="@+id/text_location_id_title"
+                android:text=""
+                android:textSize="16sp"
+                />
+        </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
     <Button
